Include unknown queue days in the filtered result as the queue days fetching seems to be buggy

--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
                   (r) =>
                     r.type === "project" ||
                     inQueueForDays === null ||
+                    getQueueDaysFromResult(r) == Infinity ||
                     getQueueDaysFromResult(r) <= inQueueForDays
                 );
               document.querySelector(
