Switch CDN of Gridjs from unpkg to cdnjs due to unknown HTTP 520 error on unpkg

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link
       rel="stylesheet"
-      href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/gridjs/6.0.6/theme/mermaid.min.css"
     />
   </head>
   <body>
@@ -71,7 +71,7 @@
       </p>
       <p>Showing custom filtered results:</p>
     </main>
-    <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gridjs/6.0.6/gridjs.umd.min.js"></script>
     <script>
       const enRelativeTimeFormat = new Intl.RelativeTimeFormat("en-GB");
       const defaultBaseCoord = { lat: 57.707374, lng: 11.939192 };
