Fix width of the address column

--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
                 columns: [
                   {
                     name: "Address",
+                    width: "320px",
                     formatter: (r) => {
                       const addressCityName =
                         postalCodeCityNameMapping[
