--- a/index.html
+++ b/index.html
@@ -167,21 +167,35 @@
           children
         );
 
-      const postalCodeCityNameMappingPromise = fetch(
-        "/sweden-postal-code-city-name-mapping/postalcodes.json"
-      ).then((res) => res.json());
-
-      fetch("./searchResults.json")
-        .then((res) => {
-          const json = res.json();
-          window.$searchResults = json;
-          return json;
-        })
+      Promise.all([
+        fetch("/sweden-postal-code-city-name-mapping/postalcodes.json").then(
+          (res) => res.json()
+        ),
+        fetch("./searchResults.json").then((res) => res.json()),
+        fetch("./queueDaysInfoByAddress.json").then((res) => res.json()),
+      ])
         .then(
-          async ({ lastUpdatedAt, searchResults: unsortedSearchResults }) => {
-            const postalCodeCityNameMapping =
-              await postalCodeCityNameMappingPromise;
-
+          async ([
+            postalCodeCityNameMapping,
+            searchResults,
+            queueDaysInfoByAddress,
+          ]) => {
+            window.$postalCodeCityNameMapping = postalCodeCityNameMapping;
+            window.$searchResults = searchResults;
+            window.$queueDaysInfoByAddress = queueDaysInfoByAddress;
+            return [
+              postalCodeCityNameMapping,
+              searchResults,
+              queueDaysInfoByAddress,
+            ];
+          }
+        )
+        .then(
+          async ([
+            postalCodeCityNameMapping,
+            { lastUpdatedAt, searchResults: unsortedSearchResults },
+            { queueDaysInfoByAddress },
+          ]) => {
             const getStreetNameNumberZipFromResult = (r) => {
               const cityName =
                 postalCodeCityNameMapping[
@@ -296,6 +310,54 @@
               const getRent = (r) =>
                 Array.isArray(r.rent) ? Math.min(...r.rent) : r.rent;
 
+              const getHistoricalQueueDayRecords = (r) => {
+                // Refer to "normalisedValuesForGrouping"
+                const { county, municipality, city, $districtName, street } = {
+                  street: (r.address.street || "").toLocaleLowerCase("sv"),
+                  street_number: (
+                    r.address.street_number || ""
+                  ).toLocaleLowerCase("sv"),
+                  city: (r.address.city || "").toLocaleLowerCase("sv"),
+                  zip: (r.address.zip || "").toLocaleLowerCase("sv"),
+                  municipality: (
+                    r.address.municipality || ""
+                  ).toLocaleLowerCase("sv"),
+                  county: (r.address.county || "").toLocaleLowerCase("sv"),
+                  $districtName: (r.$districtName || "").toLocaleLowerCase(
+                    "sv"
+                  ),
+                };
+
+                const sameDistrictDays = Object.values(
+                  queueDaysInfoByAddress[county]?.[municipality]?.[city]?.[
+                    $districtName
+                  ] ?? {}
+                )
+                  .flat()
+                  .map((x) => x.last_accept);
+                const sameStreetDays = (
+                  queueDaysInfoByAddress[county]?.[municipality]?.[city]?.[
+                    $districtName
+                  ]?.[street] ?? []
+                ).map((x) => x.last_accept);
+
+                return {
+                  sameDistrictDaysMin: sameDistrictDays.length
+                    ? Math.min(...sameDistrictDays)
+                    : null,
+                  sameDistrictDaysMax: sameDistrictDays.length
+                    ? Math.max(...sameDistrictDays)
+                    : null,
+                  sameStreetDaysMin: sameStreetDays.length
+                    ? Math.min(...sameStreetDays)
+                    : null,
+                  sameStreetDaysMax: sameStreetDays.length
+                    ? Math.max(...sameStreetDays)
+                    : null,
+                  // In the future try to find similar apartment
+                };
+              };
+
               const mainFiltered = mainFilter(searchResults);
               const customFiltered = mainFiltered
                 .filter((r) => {
@@ -346,6 +408,12 @@
                 "#search-result-count"
               ).innerText = `${customFiltered.length}/${mainFiltered.length}/${searchResults.length}`;
 
+              const queueDaysRecordMappingForCustomFiltered = {};
+              customFiltered.forEach((r) => {
+                queueDaysRecordMappingForCustomFiltered[r.id] =
+                  getHistoricalQueueDayRecords(r);
+              });
+
               return {
                 style: {
                   table: {
@@ -390,6 +458,16 @@
                         r.floor_plan ? link("Plan", r.floor_plan) : "",
                         ")",
                         Array.isArray(r.rent) ? ` (x${r.rent.length})` : "",
+                        typeof queueDaysRecordMappingForCustomFiltered[r.id]
+                          .sameStreetDaysMax === "number"
+                          ? ` (Q: ${
+                              queueDaysRecordMappingForCustomFiltered[r.id]
+                                .sameStreetDaysMin
+                            }-${
+                              queueDaysRecordMappingForCustomFiltered[r.id]
+                                .sameStreetDaysMax
+                            } d)`
+                          : "",
                       ]);
                     },
                   },
@@ -479,7 +557,23 @@
                     name: "District",
                     width: "180px",
                     formatter: (r) => {
-                      return renderDistrictName(r);
+                      return gridjs.h("span", {}, [
+                        renderDistrictName(r),
+                        typeof queueDaysRecordMappingForCustomFiltered[r.id]
+                          .sameDistrictDaysMax === "number"
+                          ? gridjs.h("br", {}, [])
+                          : "",
+                        typeof queueDaysRecordMappingForCustomFiltered[r.id]
+                          .sameDistrictDaysMax === "number"
+                          ? ` (Q: ${
+                              queueDaysRecordMappingForCustomFiltered[r.id]
+                                .sameDistrictDaysMin
+                            }-${
+                              queueDaysRecordMappingForCustomFiltered[r.id]
+                                .sameDistrictDaysMax
+                            } d)`
+                          : "",
+                      ]);
                     },
                   },
                   {
